--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>signalhub-push-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>signalhub push service</name>
-	<description>Signal hub test performance microservice</description>
+	<description>Signal hub push microservice</description>
 	<properties>
 		<java.version>17</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -152,7 +152,6 @@
 			<artifactId>liquibase-core</artifactId>
 			<version>4.23.0</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.auth0</groupId>
 			<artifactId>java-jwt</artifactId>
