some fixes, added aws beans and added sqs producer

--- a/config/application.properties
+++ b/config/application.properties
@@ -1,8 +1,9 @@
 aws.profile-name=default
 aws.region-code=us-east-1
-aws.bucket-name=
-aws.dynamodb-endpoint=http://localhost:4566
+aws.endpoint-url=http://localhost:4566
+aws.endpoint-url-sqs=http://localhost:4566/000000000000/
 
-aws.name-pod_ms=signal-hub-pod
 
-aws.internal-queue-name=internal-queue
+
+
+poc.signal-hub.internal-queue-name=local-internal-signal-hub
