--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,19 @@
 logging.level.root=INFO
-spring.main.web-appplication-type=reactive
-
-cloud.aws.region.auto=true
-
-# Load instance profile credentials
-cloud.aws.credentials.instanceProfile=true
-
-# Disable auto cloud formation
-cloud.aws.stack.auto=false
 
 aws.sqs-endpoint=http://localhost:4566/000000000000/
 aws.internal-queue-name=internal-queue
-aws.pull-limit=100
+
+
+database.name=signal-hub
+database.host=localhost
+database.port=5432
+database.username=postgres
+database.password=postgres
+
+# R2DBC Driver config
+spring.r2dbc.url=r2dbc:postgresql://${database.host}:${database.port}/${database.name}
+spring.r2dbc.username=${database.username}
+spring.r2dbc.password=${database.password}
+spring.r2dbc.pool.max-size=20
+spring.r2dbc.pool.initial-size=5
+spring.r2dbc.pool.enabled=true
