added structure spring security OAuth2.0 and filter for verify token

--- a/config/application.properties
+++ b/config/application.properties
@@ -7,3 +7,7 @@ aws.endpoint-url-sqs=http://localhost:4566/000000000000/
 
 
 poc.signal-hub.internal-queue-name=local-internal-signal-hub
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri: https://selfcare.uat.interop.pagopa.it/
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri: https://uat.interop.pagopa.it/.well-known/jwks.json
+poc.signal-hub.issuer-voucher=interop.pagopa.it
