--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 logging.level.root=INFO
+spring.main.web-application-type=reactive
 
-aws.sqs-endpoint=http://localhost:4566/000000000000/
-aws.internal-queue-name=internal-queue
+cloud.aws.stack.auto=false
+aws.profile=default
+aws.region=${AWS_REGION:us-east-1}
+aws.endpoint-url=${AWS_SQS_ENDPOINT:http://localhost:4566/000000000000/}
+aws.endpoint-url-sqs=${AWS_SQS_ENDPOINT:http://localhost:4566/000000000000/}
+aws.internal-queue-name=local-internal-signal-hub
 
 
 database.name=signal-hub
