--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 logging.level.root=INFO
 spring.main.web-application-type=reactive
 
+server.port=8081
+
 cloud.aws.stack.auto=false
 aws.profile=default
 aws.region=${AWS_REGION:us-east-1}
