--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Signal hub push microservice</description>
 	<properties>
 		<java.version>17</java.version>
+		<jacoco.min.line.cover.ratio>0.00</jacoco.min.line.cover.ratio>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<hibernate.version>5.6.15.Final</hibernate.version>
 		<com.amazonaws.version>2.11.0</com.amazonaws.version>
@@ -225,6 +226,20 @@
 							<version>0.2.0</version>
 						</path>
 					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<configuration>
+
+					<excludes>
+						<exclude>it/pagopa/interop/signalhub/push/service/rest/v1/dto/*</exclude>
+						<exclude>it/pagopa/interop/signalhub/push/service/rest/v1/dto/**</exclude>
+						<exclude>it/pagopa/interop/signalhub/push/service/generated/*</exclude>
+						<exclude>it/pagopa/interop/signalhub/push/service/generated/**</exclude>
+					</excludes>
+
 				</configuration>
 			</plugin>
 			<plugin>
