--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,14 @@ spring.r2dbc.password=${database.password}
 spring.r2dbc.pool.max-size=20
 spring.r2dbc.pool.initial-size=5
 spring.r2dbc.pool.enabled=true
+
+#######################################
+# Redis
+#######################################
+spring.redis.host=localhost
+spring.redis.database=0
+spring.redis.password=signal-hub
+spring.redis.username=signal-hub-user
+spring.redis.port=6379
+spring.cache.type=redis
+spring.cache.cache-names=redis-cache
