--- a/pom.xml
+++ b/pom.xml
@@ -241,16 +241,23 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.10</version>
 				<configuration>
+
 					<excludes>
-						<exclude>it/pagopa/interop/signalhub/push/service/rest/v1/dto/*</exclude>
-						<exclude>it/pagopa/interop/signalhub/push/service/rest/v1/dto/**</exclude>
+						<exclude>it/pagopa/interop/signalhub/push/service/dto/*</exclude>
+						<exclude>it/pagopa/interop/signalhub/push/service/dto/**</exclude>
+						<exclude>it/pagopa/interop/signalhub/push/service/rest/v1/api/*</exclude>
+						<exclude>it/pagopa/interop/signalhub/push/service/rest/v1/api/**</exclude>
 						<exclude>it/pagopa/interop/signalhub/push/service/generated/*</exclude>
 						<exclude>it/pagopa/interop/signalhub/push/service/generated/**</exclude>
 					</excludes>
+
 				</configuration>
 				<executions>
 					<execution>
+						<id>prepare-integration-tests</id>
+						<phase>pre-integration-test</phase>
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
