--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,8 +30,7 @@ spring.r2dbc.pool.enabled=true
 #######################################
 spring.redis.host=localhost
 spring.redis.database=0
-spring.redis.password=signal-hub
-spring.redis.username=signal-hub-user
+spring.cache.redis.time-to-live=60000
 spring.redis.port=6379
 spring.cache.type=redis
 spring.cache.cache-names=redis-cache
