--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,7 +3,7 @@ cloud.aws.region.auto=true
 # Load instance profile credentials
 cloud.aws.credentials.instanceProfile=true
 
-aws.endpoint-url=http://localhost:4566
+aws.endpoint-url=http://localhost:4566/000000000000/
 aws.endpoint-url-sqs=http://localhost:4566/000000000000/
 aws.internal-queue-name=internal-queue
 aws.region=us-east-1
@@ -18,3 +18,5 @@ spring.r2dbc.pool.enabled=true
 spring.data.r2dbc.repositories.enabled=true
 
 spring.sql.init.platform=h2
+
+poc.signal-hub.internal-queue-name=internal-queue
