minor change in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 logging.level.root=INFO
-spring.main.web-application-type=reactive
-server.port=8081
 
+spring.main.web-application-type=reactive
+management.endpoint.health.show-details=always
 cloud.aws.stack.auto=false
 aws.profile=default
 aws.region=${AWS_REGION:us-east-1}
