--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,8 @@ server.port=8081
 cloud.aws.stack.auto=false
 aws.profile=default
 aws.region=${AWS_REGION:us-east-1}
-aws.endpoint-url=${AWS_SQS_ENDPOINT:http://localhost:4566/000000000000/}
-aws.endpoint-url-sqs=${AWS_SQS_ENDPOINT:http://localhost:4566/000000000000/}
-
-poc.signal-hub.internal-queue-name=local-internal-signal-hub
+aws.sqs-endpoint=${AWS_SQS_ENDPOINT:http://localhost:4566/000000000000/}
+aws.internal-queue-name=local-internal-signal-hub
 
 
 database.name=signal-hub
