--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -16,7 +16,10 @@ spring.r2dbc.pool.max-size=20
 spring.r2dbc.pool.initial-size=5
 spring.r2dbc.pool.enabled=true
 spring.data.r2dbc.repositories.enabled=true
-
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.sql.init.platform=h2
+spring.sql.init.mode=always
 
 poc.signal-hub.internal-queue-name=internal-queue
