--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ aws.region=${AWS_REGION:us-east-1}
 aws.endpoint-url=${AWS_SQS_ENDPOINT:http://localhost:4566/000000000000/}
 aws.endpoint-url-sqs=${AWS_SQS_ENDPOINT:http://localhost:4566/000000000000/}
 
+jwk.provider.endpoint=https://uat.interop.pagopa.it
+
 poc.signal-hub.internal-queue-name=local-internal-signal-hub
 
 
