Revert "moved aws.profile property"
This reverts commit 4ed270317f1f713d0cca229d617af4ed8c695151.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ logging.level.root=INFO
 spring.main.web-application-type=reactive
 management.endpoint.health.show-details=always
 cloud.aws.stack.auto=false
-
+aws.profile=default
 aws.region=${AWS_REGION:us-east-1}
 aws.sqs-endpoint=${AWS_SQS_ENDPOINT:http://localhost:4566/000000000000/}
 aws.internal-queue-name=local-internal-signal-hub
