--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,18 @@ logging.level.root=INFO
 spring.main.web-application-type=reactive
 management.endpoint.health.show-details=always
 cloud.aws.stack.auto=false
-aws.profile=default
-aws.region=${AWS_REGION:us-east-1}
 aws.sqs-endpoint=${AWS_SQS_ENDPOINT:http://localhost:4566/000000000000/}
 aws.internal-queue-name=local-internal-signal-hub
 
 jwk.provider.endpoint=https://uat.interop.pagopa.it
 
-poc.signal-hub.internal-queue-name=local-internal-signal-hub
 
+security.pago-pa-provider.client-id=11368527-494b-4244-9706-b782b5443831
+security.pago-pa-provider.token-uri=https://auth.uat.interop.pagopa.it/token.oauth2
+security.pago-pa-provider.kms-key-id=4772859a-07ba-40e4-b97c-e5f2ce659d4b
+
+
+pdnd.client.event.endpoint-url=https://api.uat.interop.pagopa.it/1.0
 
 database.name=signal-hub
 database.host=localhost
@@ -30,9 +33,9 @@ spring.r2dbc.pool.enabled=true
 #######################################
 # Redis
 #######################################
-spring.redis.host=localhost
-spring.redis.database=0
+spring.data.redis.host=localhost
+spring.data.redis.database=0
 spring.cache.redis.time-to-live=60000
-spring.redis.port=6379
+spring.data.redis.port=6379
 spring.cache.type=redis
 spring.cache.cache-names=redis-cache
