--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,9 @@ security.pago-pa-provider.kms-key-id=4772859a-07ba-40e4-b97c-e5f2ce659d4b
 
 pdnd.client.event.endpoint-url=https://api.uat.interop.pagopa.it/1.0
 
+application.eservice.push.id=6b14c622-dad2-44ea-82bc-2dd4010364d5
+application.eservice.push.audience=interop-signalhub-push-signal
+
 database.name=signal-hub
 database.host=localhost
 database.port=5432
