fixed some test

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,12 +1,8 @@
 cloud.aws.region.auto=true
 
-# Load instance profile credentials
-cloud.aws.credentials.instanceProfile=true
-
-aws.esqs-endpoint=http://localhost:4566/000000000000/
+aws.sqs-endpoint=http://localhost:4566/000000000000/
 aws.internal-queue-name=internal-queue
-aws.region=us-east-1
-aws.profile=default
+
 
 spring.r2dbc.url=r2dbc:h2:mem:///db;MODE=PostgreSQL
 spring.r2dbc.username=signal-hub-test
@@ -20,5 +16,3 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.sql.init.platform=h2
 spring.sql.init.mode=always
-
-poc.signal-hub.internal-queue-name=internal-queue
