--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -4,6 +4,9 @@ aws.sqs-endpoint=http://localhost:4566/000000000000/
 aws.internal-queue-name=internal-queue
 
 
+mockserver.bean.port=1080
+pdnd.client.event.endpoint-url=http://localhost:${mockserver.bean.port}/1.0
+
 spring.r2dbc.url=r2dbc:h2:mem:///db;MODE=PostgreSQL
 spring.r2dbc.username=signal-hub-test
 spring.r2dbc.password=signal-hub-test
