--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,6 @@
 		<java.version>17</java.version>
 		<jacoco.min.line.cover.ratio>0.00</jacoco.min.line.cover.ratio>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<hibernate.version>5.6.15.Final</hibernate.version>
 		<com.amazonaws.version>2.11.0</com.amazonaws.version>
 		<io.springfox.version>2.8.0</io.springfox.version>
 		<org.openapitools.version>0.2.1</org.openapitools.version>
@@ -129,7 +128,7 @@
 		<dependency>
 			<groupId>io.r2dbc</groupId>
 			<artifactId>r2dbc-h2</artifactId>
-			<scope>runtime</scope>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
@@ -212,6 +211,11 @@
 			<artifactId>mockserver-netty</artifactId>
 			<version>5.15.0</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>3.1.2</version>
 		</dependency>
 	</dependencies>
 
