--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -15,5 +15,8 @@ spring.r2dbc.pool.initial-size=5
 spring.r2dbc.pool.enabled=true
 spring.data.r2dbc.repositories.enabled=true
 
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
 spring.sql.init.platform=h2
 spring.sql.init.mode=always
