changed env props of database host

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ application.eservice.push.id=6b14c622-dad2-44ea-82bc-2dd4010364d5
 application.eservice.push.audience=interop-signalhub-push-signal
 
 database.name=signal-hub
-database.host=localhost
+database.host=${DATABASE_READER_HOST:localhost}
 database.port=5432
 database.username=postgres
 database.password=postgres
