added tracing log

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 logging.level.root=INFO
+logging.level.org.springframework.cloud.sleuth=INFO
+logging.pattern.level="%2p [%X{traceId:-}]"
+
 
 spring.main.web-application-type=reactive
 management.endpoint.health.show-details=always
@@ -18,6 +21,7 @@ pdnd.client.event.endpoint-url=https://api.uat.interop.pagopa.it/1.0
 
 application.eservice.push.id=6b14c622-dad2-44ea-82bc-2dd4010364d5
 application.eservice.push.audience=interop-signalhub-push-signal
+application.eservice.push.header-trace-id-key=X-Trace-Id
 
 database.name=signal-hub
 database.host=${DATABASE_READER_HOST:localhost}
