--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ jwk.provider.endpoint=https://uat.interop.pagopa.it
 security.pago-pa-provider.client-id=11368527-494b-4244-9706-b782b5443831
 security.pago-pa-provider.token-uri=https://auth.uat.interop.pagopa.it/token.oauth2
 security.pago-pa-provider.kms-key-id=4772859a-07ba-40e4-b97c-e5f2ce659d4b
-
+security.pago-pa-provider.audience=auth.uat.interop.pagopa.it/client-assertion
 
 pdnd.client.event.endpoint-url=https://api.uat.interop.pagopa.it/1.0
 
