--- a/docs/openapi/push-signal_v1_sync.yaml
+++ b/docs/openapi/push-signal_v1_sync.yaml
@@ -116,7 +116,7 @@ paths:
                 type: integer
               description: Time interval in milliseconds. Allowed requests will be constantly replenished during the interval. At the end of the interval the max allowed requests will be available
 
-  /push-signal-list:
+  /push-signal-by-consumers:
     post:
       tags:
         - Gateway
@@ -259,7 +259,7 @@ components:
       properties:
         signalType:
           $ref: '#/components/schemas/SignalType'
-        consumers:
+        signalByConsumers:
           type: array
           minItems: 0
           items:
