refactoring pattern logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 logging.level.root=INFO
-logging.level.org.springframework.cloud.sleuth=INFO
-logging.pattern.level="%2p [%X{traceId:-}]"
+logging.pattern.level=%2p [%X{traceId:-}]
 
 
 spring.main.web-application-type=reactive
